# icpRustFinalProject

./: Cargo.toml  README.md  dfx.json
src/events_backend/: Cargo.toml
src/events_backend/src/: lib.rs
