[package]
name = "rust_practice"
description = "setting events on Ic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
create-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk="0.12"
ic-stable-structures = "0.5.4"
serde = "1.0.132"
ic-cdk-macros = "0.8.1"
serde_json = "1.0.93"

